crates/bijux-dna-planner-fastq/tests/snapshots/bijux-dna-planner-fastq__contracts__explain__fastq.screen_taxonomy.snap
---
source: crates/bijux-dna-planner-fastq/tests/contracts/explain/explainability.rs
expression: reason_json
---
{
  "details": {
    "contract_hash": "3e97b60170b412be5ff3452a1a636055cdd67115a1784b2342a28307e01fe561",
    "defaults_diff": {}
  },
  "kind": "default",
  "summary": "default selection for fastq.screen_taxonomy"
}
