crates/bijux-dna-planner-fastq/tests/snapshots/bijux-dna-planner-fastq__contracts__explain__fastq.trim_reads.snap
---
source: crates/bijux-dna-planner-fastq/tests/contracts/explain/explainability.rs
expression: reason_json
---
{
  "details": {
    "contract_hash": "ea2d345c8eaf1aa5c165ea904ab36b66ff8b7ea47603c50618357e7d26b42517",
    "defaults_diff": {}
  },
  "kind": "default",
  "summary": "default selection for fastq.trim_reads"
}
